--- a/po/cs.po
+++ b/po/cs.po
@@ -4148,8 +4148,8 @@ msgid "UNEXPECTED INCONSISTENCY: the filesystem is being modified while fsck is 
 msgstr "NEČEKANÁ NEKONZISTENCE: souborový systém je měněn, zatímco fsck běží.\n"
 
 #: misc/badblocks.c:75
-msgid "done                                                 \n"
-msgstr "hotovo                                               \n"
+msgid "done                                                                  \n"
+msgstr "hotovo                                                                \n"
 
 #: misc/badblocks.c:100
 #, c-format
@@ -4176,8 +4176,8 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
-msgstr "%6.2f %% hotovo, %s uplynulo. (%d/%d/%d chyb)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
+msgstr "%6.2f %% hotovo, %s uplynulo. (%d/%d/%d chyb), %s MB/s"
 
 #: misc/badblocks.c:337
 msgid "Testing with random pattern: "
