--- a/po/fi.po
+++ b/po/fi.po
@@ -3695,8 +3695,8 @@ msgid ""
 msgstr ""
 
 #: misc/badblocks.c:75
-msgid "done                                                 \n"
-msgstr "valmis                                               \n"
+msgid "done                                                                  \n"
+msgstr "valmis                                                                \n"
 
 #: misc/badblocks.c:100
 #, c-format
@@ -3717,7 +3717,7 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
 msgstr ""
 
 #: misc/badblocks.c:337
