--- a/po/pl.po
+++ b/po/pl.po
@@ -4120,8 +4120,8 @@ msgid "UNEXPECTED INCONSISTENCY: the filesystem is being modified while fsck is 
 msgstr "NIEOCZEKIWANA NIESPÓJNOŚĆ: system plików został zmodyfikowany podczas działania fsck.\n"
 
 #: misc/badblocks.c:75
-msgid "done                                                 \n"
-msgstr "zakończono                                           \n"
+msgid "done                                                                  \n"
+msgstr "zakończono                                                            \n"
 
 #: misc/badblocks.c:100
 #, c-format
@@ -4148,8 +4148,8 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
-msgstr "Gotowe w %6.2f%%, minęło %s (błędów: %d/%d/%d)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
+msgstr "Gotowe w %6.2f%%, minęło %s (błędów: %d/%d/%d), %s MB/s"
 
 #: misc/badblocks.c:337
 msgid "Testing with random pattern: "
