--- a/po/tr.po
+++ b/po/tr.po
@@ -3963,8 +3963,8 @@ msgstr ""
 
 #: misc/badblocks.c:75
 #, fuzzy
-msgid "done                                                 \n"
-msgstr "bitti                           .\n"
+msgid "done                                                                  \n"
+msgstr "bitti                                                                 \n"
 
 #: misc/badblocks.c:100
 #, fuzzy, c-format
@@ -3992,7 +3992,7 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
 msgstr ""
 
 #: misc/badblocks.c:337
