--- a/po/uk.po
+++ b/po/uk.po
@@ -4123,8 +4123,8 @@ msgid "UNEXPECTED INCONSISTENCY: the filesystem is being modified while fsck is 
 msgstr "НЕОЧІКУВАНА ВТРАТА ЦІЛІСНОСТІ: під час виконання fsck до файлової системи було внесено зміни.\n"
 
 #: misc/badblocks.c:75
-msgid "done                                                 \n"
-msgstr "виконано                                             \n"
+msgid "done                                                                  \n"
+msgstr "виконано                                                              \n"
 
 #: misc/badblocks.c:100
 #, c-format
@@ -4150,8 +4150,8 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
-msgstr "Виконано на %6.2f%%, лишилося %s. (помилки: %d/%d/%d)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
+msgstr "Виконано на %6.2f%%, лишилося %s. (помилки: %d/%d/%d), %s MB/s"
 
 #: misc/badblocks.c:337
 msgid "Testing with random pattern: "
