--- a/po/fur.po
+++ b/po/fur.po
@@ -3735,7 +3735,7 @@ msgid "UNEXPECTED INCONSISTENCY: the filesystem is being modified while fsck is 
 msgstr ""
 
 #: misc/badblocks.c:75
-msgid "done                                                 \n"
+msgid "done                                                                  \n"
 msgstr ""
 
 #: misc/badblocks.c:100
@@ -3756,7 +3756,7 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
 msgstr ""
 
 #: misc/badblocks.c:337
