--- a/po/it.po
+++ b/po/it.po
@@ -3935,8 +3935,8 @@ msgstr ""
 
 #: misc/badblocks.c:75
 #, fuzzy
-msgid "done                                                 \n"
-msgstr "fatto                           \n"
+msgid "done                                                                  \n"
+msgstr "fatto                                                                 \n"
 
 #: misc/badblocks.c:100
 #, fuzzy, c-format
@@ -3961,7 +3961,7 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
 msgstr ""
 
 #: misc/badblocks.c:337
