--- a/po/ka.po
+++ b/po/ka.po
@@ -3917,8 +3917,8 @@ msgid "UNEXPECTED INCONSISTENCY: the filesystem is being modified while fsck is 
 msgstr ""
 
 #: misc/badblocks.c:75
-msgid "done                                                 \n"
-msgstr "დასრულდა                                          \n"
+msgid "done                                                                  \n"
+msgstr "დასრულდა                                                             \n"
 
 #: misc/badblocks.c:100
 #, c-format
@@ -3938,7 +3938,7 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
 msgstr ""
 
 #: misc/badblocks.c:337
