--- a/po/sv.po
+++ b/po/sv.po
@@ -4120,8 +4120,8 @@ msgid "UNEXPECTED INCONSISTENCY: the filesystem is being modified while fsck is 
 msgstr "OVÄNTAD INKONSISTENS: filsystemet modifieras medan fsck körs.\n"
 
 #: misc/badblocks.c:75
-msgid "done                                                 \n"
-msgstr "klar                                                 \n"
+msgid "done                                                                  \n"
+msgstr "klar                                                                  \n"
 
 #: misc/badblocks.c:100
 #, c-format
@@ -4148,8 +4148,8 @@ msgstr ""
 
 #: misc/badblocks.c:229
 #, c-format
-msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors)"
-msgstr "%6.2f %% klar, %s har gått. (%d/%d/%d fel)"
+msgid "%6.2f%% done, %s elapsed. (%d/%d/%d errors), %s MB/s"
+msgstr "%6.2f %% klar, %s har gått. (%d/%d/%d fel), %s MB/s"
 
 #: misc/badblocks.c:337
 msgid "Testing with random pattern: "
